<resources>
    <string name="app_name">Garment Machinery</string>
    <string name="app_version">V 1.0.0</string>
    <string name="app_comp">Smart Wear Exports (Pvt) Ltd</string>
    <string name="search_hint">Search</string>
    <string name="bottom_nav_home_title">Home</string>
    <string name="bottom_nav_shop_title">Shop</string>
    <string name="bottom_nav_cart_title">Cart</string>
    <string name="bottom_nav_profile_title">Profile</string>
    <string name="side_nav_home_title">Home</string>
    <string name="side_nav_profile_title">Profile</string>
    <string name="side_nav_orders_title">My Orders</string>
    <string name="side_nav_wishlist_title">Wishlist</string>
    <string name="side_nav_message_title">Message</string>
    <string name="side_nav_setting_title">Setting</string>
    <string name="side_nav_login_title">Login</string>
    <string name="side_nav_logout_title">Logout</string>
    <string name="login_title">Hello there, Welcome Back</string>
    <string name="login_sub_title">Sign In to continue</string>
    <string name="login_email">Email</string>
    <string name="login_password">Password</string>
    <string name="login_forget_password">Forgot Password?</string>
    <string name="login_button">Sign In</string>
    <string name="login_to_signup_btn">Not yet registered? Sign Up</string>
    <string name="reg_title">Welcome</string>
    <string name="reg_sub_title">Sign Up to start your new account</string>
    <string name="reg_username">Username</string>
    <string name="reg_contact">Contact No</string>
    <string name="reg_email">Email</string>
    <string name="reg_password">Password</string>
    <string name="reg_button">Sign Up</string>
    <string name="signup_to_login_btn">Already have an account? Sign In</string>

    <string name="drawer_open">Open Navigation Drawer</string>
    <string name="drawer_close">Close Navigation Drawer</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>
    <string name="favorite">Favorite</string>
    <string name="my_order">Order</string>
    <string name="shop">Shop</string>
    <string name="about_us">About Us</string>
    <string name="sign_in_with_google">Sign in with Google</string>

    <string name="web_Client_id">928849995469-nqrf1dkron287dnvipf0diskai8ulvur.apps.googleusercontent.com</string>
</resources>