<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activity.RegisterActivity"
        android:orientation="vertical"
        android:padding="20dp">

    <ImageView
        android:id="@+id/logoId"
        android:layout_width="125dp"
        android:layout_height="125dp"
        android:src="@drawable/splash_app_icon_transparent"
        android:transitionName="logo_image" />

    <TextView
        android:id="@+id/logo_name"
        android:layout_width="176dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="-20dp"
        android:fontFamily="@font/bangers"
        android:text="@string/reg_title"
        android:textColor="@color/purple"
        android:textSize="35dp"
        android:transitionName="logo_text" />

    <TextView
        android:id="@+id/sub_logo_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:text="@string/reg_sub_title"
        android:transitionName="logo_sub_text"
        android:textColor="@color/brown"
        android:textSize="18dp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reg_username"
                android:hint="@string/reg_username"
                android:textColorHint="@color/gray"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTextUserName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:textColor="@color/brown"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reg_email"
                android:hint="@string/reg_email"
                android:textColorHint="@color/gray"
                android:transitionName="user_email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTextEmailAddress"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/brown"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reg_contactNo"
                android:hint="@string/reg_contact"
                android:textColorHint="@color/gray"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTextContactNo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    android:textColor="@color/brown"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/reg_password"
                android:hint="@string/reg_password"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/gray"
                android:textColorHint="@color/gray"
                android:transitionName="user_password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextTextPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:textColor="@color/brown"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reg_button"
                android:backgroundTint="@color/yellow"
                android:textColor="@color/white"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="5dp"
                android:id="@+id/reg_btn"
                android:transitionName="button_trans"/>

            <Button
                android:id="@+id/goToSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/no_color"
                android:elevation="0dp"
                android:text="@string/signup_to_login_btn"
                android:textColor="@color/yellow"
                android:transitionName="signIn_signUp_trans" />

        </LinearLayout>

</LinearLayout>