<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".fragment.HomeFragment"
    android:id="@+id/homeFrame">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">


            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolBar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/yellow"
                app:navigationIcon="@drawable/baseline_menu_24">

                <TextView
                    android:id="@+id/textInputSearch"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginStart="0dp"
                    android:layout_marginEnd="20dp"
                    android:gravity="start|center"
                    android:background="@drawable/custom_input_search_home"
                    android:drawableStart="@drawable/baseline_search_24"
                    android:hint="@string/search_hint"
                    android:textColorHint="@color/white"
                    android:textColor="@color/white"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:textSize="14sp"
                    />

            </com.google.android.material.appbar.MaterialToolbar>


        </LinearLayout>

    </LinearLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="65dp">

        <ScrollView
            android:id="@+id/scrollView3"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_anchor="@+id/scrollView3"
            app:layout_anchorGravity="center">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="60dp">


                <androidx.constraintlayout.widget.ConstraintLayout
                    android:id="@+id/locationSelect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:layout_marginRight="20dp"
                    android:layout_marginLeft="20dp"
                    android:orientation="horizontal"
                    android:background="@drawable/custom_input_search">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="320dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:textSize="14dp"
                        android:textColor="@color/brown"
                        android:text="Select your delivery location"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toStartOf="@+id/locationIcon"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"/>

                    <ImageView
                        android:id="@+id/locationIcon"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center"
                        android:layout_margin="5dp"
                        android:background="@drawable/baseline_edit_location_alt_24"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <TextView
                    android:id="@+id/headline"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/bangers"
                    android:text="@string/app_name"
                    android:textAlignment="center"
                    android:textColor="@color/purple"
                    android:layout_marginTop="-10dp"
                    android:layout_marginBottom="5dp"
                    android:textSize="30sp" />


                <ViewFlipper
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:flipInterval="10000"
                    android:autoStart="true"
                    android:inAnimation="@android:anim/slide_in_left"
                    android:outAnimation="@android:anim/slide_out_right">

                    <ImageView
                        android:id="@+id/slideImg1"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/slide1"/>
                    <ImageView
                        android:id="@+id/slideImg2"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/slide2"/>
                    <ImageView
                        android:id="@+id/slideImg3"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/slide3"/>

                </ViewFlipper>

                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="12dp"
                    android:layout_marginEnd="24dp"
                    android:text="Category"
                    android:textColor="@color/purple"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/categoryView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:clipToPadding="false"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginEnd="24dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView9"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="Hot Deal"
                        android:textColor="@color/purple"
                        android:textSize="16sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/textView10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="See all"
                        android:textColor="@color/yellow" />

                </LinearLayout>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/bestDealView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:clipToPadding="false"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp" />


                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="180dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="12dp"
                    android:background="@drawable/homepicbanner"/>


                <ViewFlipper
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginBottom="10dp"
                    android:flipInterval="5000"
                    android:autoStart="true"
                    android:inAnimation="@android:anim/slide_in_left"
                    android:outAnimation="@android:anim/slide_out_right">

                    <ImageView
                        android:id="@+id/slideImg4"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/logotape1"/>
                    <ImageView
                        android:id="@+id/slideImg5"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/logotape2"/>
                    <ImageView
                        android:id="@+id/slideImg6"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/logotape3"/>
                    <ImageView
                        android:id="@+id/slideImg7"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/logotape4"/>
                    <ImageView
                        android:id="@+id/slideImg8"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/logotape5"/>

                </ViewFlipper>

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:fontFamily="@font/antic"
                    android:includeFontPadding="false"
                    android:text="@string/app_comp"
                    android:textAlignment="center"
                    android:textColor="@color/brown"
                    android:textSize="14sp" />

            </LinearLayout>

        </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/whatsapp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:backgroundTint="#208814"
        android:src="@drawable/baseline_phone_enabled_24" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>

</FrameLayout>